# tooltrain

./: .gitignore  Cargo.toml
commander-data/: Cargo.toml  README.md
commander-data/src/: flexbuffer_coders.rs  types.rs
commander-engine/: Cargo.toml
commander-engine/src/: bindings.rs  engine.rs  lib.rs  outputs.rs  storage.rs
commander-engine/src/datastream/: list.rs  mod.rs  tree.rs  value.rs
commander-engine/src/outputs/: api.rs  bindings.rs  mod.rs  structure.rs
commander-engine/src/streaming/: host.rs  mod.rs  storage.rs
commander-engine/src/streaming/inputs/: api.rs  change_streams.rs  host.rs  mod.rs  storage.rs
commander-engine/src/streaming/outputs/: api.rs  host.rs  mod.rs
commander-rust-guest/: Cargo.toml
commander-rust-guest/src/: lib.rs
commander-ui/: .eslintrc.cjs  LICENSE  index.html  package-lock.json  package.json  tailwind.config.js
commander-ui/src/: App.tsx  index.css
commander-ui/src-tauri/: Cargo.toml
commander-ui/src-tauri/src/: main.rs
core-programs/: Cargo.toml
core-programs/file-explorer/: Cargo.toml
core-programs/file-explorer/src/: bindings.rs  lib.rs
core-programs/ls/: Cargo.toml
core-programs/ls/src/: lib.rs
example-programs/mastodon-feed/: Cargo.toml
example-programs/mastodon-feed/src/: lib.rs  parse.rs
host/: Cargo.toml
host/src/: main.rs
ls/: Cargo.toml  test.rs
ls/src/: bindings.rs  lib.rs
mastodon-feed/: Cargo.toml
mastodon-feed/src/: bindings.rs  lib.rs  parse.rs
program_template/: Cargo.toml
program_template/src/: bindings.rs  lib.rs
tooltrain-data/: Cargo.toml  README.md
tooltrain-data/src/: flexbuffer_coders.rs  lib.rs
tooltrain-engine/: Cargo.toml
tooltrain-engine/src/: bindings.rs  engine.rs  lib.rs
tooltrain-engine/src/datastream/: list.rs  mod.rs  tree.rs  value.rs
tooltrain-engine/src/streaming/: host.rs  storage.rs
tooltrain-engine/src/streaming/inputs/: api.rs  change_streams.rs  host.rs
tooltrain-engine/src/streaming/outputs/: api.rs  host.rs  mod.rs  storage.rs
tooltrain-rust-guest/: Cargo.toml
tooltrain-rust-guest/src/: lib.rs
wit/: commander.wit  deps.toml  tooltrain.wit  types.pest
