[package]
name = "commander-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
async-trait = "0.1.77"
cap-std = "2.0.1"
lazy_static = "1.4.0"
parking_lot = "0.12.1"
tokio = { version = "1.36.0", features = ["macros"] }
wasmtime = { version = "18.0.1", features = ["component-model", "async"] }
wasmtime-wasi = { version = "18.0.1", features = ["tokio"] }
wasmtime-wasi-http = "18.0.1"
