[package]
name = "commander-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
async-trait = "0.1.77"
cap-std = "3.0.0"
lazy_static = "1.4.0"
parking_lot ={version =  "0.12.1", features = ["send_guard"]}
tokio = { version = "1.36.0", features = ["macros"] }
tokio-stream = { version = "0.1.14", features = ["sync"] }
wasmtime = { version = "19.0.0", features = ["component-model", "async"] }
wasmtime-wasi = "19.0.0"
wasmtime-wasi-http = "19.0.0"
commander-data = { path = "../commander-data" }
derive_more = "0.99.7"
