[package]
name = "host"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36.0", features = ["macros"] }
commander-engine = { path = "../commander-engine" }
anyhow = "1.0.79"
tokio-stream = "0.1.14"

