[package]
name = "tooltrain-data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "~1"
derive_more = { version = "~1", features = ["deref","from","is_variant","unwrap","try_into"] }
flexbuffers = "~2"
pest = "~2.7"
pest_derive = "~2.7"
serde = { version = "~1", features = ["derive"] }
