[package]
name = "file-explorer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.80"
commander-data = {path = "../../commander-data"}
commander-rust-guest = {path = "../../commander-rust-guest"}
tokio = { version = "1.36.0", features = ["parking_lot", "rt", "sync"] }
tokio-stream = { version = "0.1.14" }

[package.metadata.component]
package = "commander:base"
