[package]
name = "ls"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
commander-data = {path = "../../commander-data"}
commander-rust-guest = {path = "../../commander-rust-guest"}
maplit = "1.0.2"
once_cell = "1.19.0"

[package.metadata.component]
package = "commander:base"
