[package]
name = "mastodon-feed"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
lazy_static = "1.4.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tooltrain-data = {path = "../../tooltrain-data"}
tooltrain-rust-guest = {path = "../../tooltrain-rust-guest"}

[package.metadata.component]
package = "tooltrain:base"
